# viz-sys-conferences

./: .gitignore  Makefile  README.md  STATS.md  heatmap_stopwords.txt  pyproject.toml  sosp26_topics.txt
config/: ai_keywords.txt  heatmap_stopwords.txt
data/: ATC_2012.json  ATC_2013.json  ATC_2014.json  ATC_2015.json  ATC_2016.json  ATC_2017.json  ATC_2018.json  ATC_2019.json  ATC_2020.json  ATC_2021.json  ATC_2022.json  ATC_2023.json  ATC_2024.json  ATC_2025.json  EuroSys_2019.json  EuroSys_2022.json  EuroSys_2023.json  EuroSys_2024.json  EuroSys_2025.json  EuroSys_2026.json  NSDI_2012.json  NSDI_2013.json  NSDI_2014.json  NSDI_2015.json  NSDI_2016.json  NSDI_2017.json  NSDI_2018.json  NSDI_2019.json  NSDI_2020.json  NSDI_2021.json  NSDI_2022.json  NSDI_2023.json  NSDI_2024.json  NSDI_2025.json  OSDI_2012.json  OSDI_2014.json  OSDI_2016.json  OSDI_2018.json  OSDI_2020.json  OSDI_2022.json  (+7 more)
notebooks/: explore.ipynb
scripts/: stats.py
src/viz_sys_conferences/: __init__.py  __main__.py  dblp_dump.py  embed.py  http_client.py  models.py  plot.py  registry.py  stats.py  storage.py  viz_data.py  viz_figures.py  viz_plots.py
src/viz_sys_conferences/crawlers/: base.py  dblp.py  eurosys.py  sosp.py  usenix.py
tests/: test_dblp.py  test_dblp_dump.py  test_eurosys.py  test_eurosys_eras.py  test_models.py  test_registry.py  test_sosp.py  test_sosp_eras.py  test_usenix.py  test_usenix_eras.py  test_visualisations.py
tests/fixtures/: dblp_eurosys2008.html  dblp_sosp2011.html  eurosys_2019.html  eurosys_2022.html  eurosys_2023.html  eurosys_2024.html  eurosys_2025.html  eurosys_2026.html  sosp_2013.html  sosp_2017.html  sosp_2019.html  sosp_2021_toc.html  sosp_2023_toc.html  sosp_2025.html  usenix_nsdi12.html  usenix_osdi25.html
