[project]
name = "viz-sys-conferences"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marcel Wagenländer", email = "marcel.wagenlander19@imperial.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.96.0",
    "beautifulsoup4>=4.12",
    "click>=8.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "lxml>=5.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.2",
    "playwright>=1.44",
    "plotly>=6.7.0",
    "pydantic>=2.7",
    "python-dotenv>=1.2.2",
    "rich>=13.0",
    "scikit-learn>=1.8.0",
    "tenacity>=8.3",
    "umap-learn>=0.5.12",
]

[project.scripts]
crawl = "viz_sys_conferences.__main__:main"
stats = "viz_sys_conferences.stats:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "nbconvert>=7.17.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
extend-exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["viz_sys_conferences"]
